@@ -2,7 +2,7 @@
 // Licensed under the GNU GPL Version 2.
 //
 // First added:  2003-05-06
-// Last changed: 2005-12-18
+// Last changed: 2005-12-20
 
 #include <dolfin/dolfin_log.h>
 #include <dolfin/ParameterValue.h>
@@ -14,6 +14,11 @@ using namespace dolfin;
 Parameter::Parameter(int value) : value(0), _type(type_int)
 {
   this->value = new IntValue(value);
+}
+//-----------------------------------------------------------------------------
+Parameter::Parameter(uint value) : value(0), _type(type_int)
+{
+  this->value = new IntValue(static_cast<int>(value));
 }
 //-----------------------------------------------------------------------------
 Parameter::Parameter(real value) : value(0), _type(type_real)
@@ -31,14 +36,15 @@ Parameter::Parameter(std::string value) : value(0), _type(type_string)
   this->value = new StringValue(value);
 }
 //-----------------------------------------------------------------------------
-Parameter::Parameter(uint value) : value(0), _type(type_int)
+Parameter::Parameter(const char* value) : value(0), _type(type_string)
 {
-  this->value = new IntValue(static_cast<int>(value));
+  std::string s(value);
+  this->value = new StringValue(s);
 }
 //-----------------------------------------------------------------------------
 Parameter::Parameter(const Parameter& parameter)
   : value(0), _type(parameter._type)
-{
+{ 
   switch ( parameter._type )
   {
   case type_int:
@@ -64,6 +70,12 @@ const Parameter& Parameter::operator= (int value)
   return *this;
 }
 //-----------------------------------------------------------------------------
+const Parameter& Parameter::operator= (uint value)
+{
+  *(this->value) = value;
+  return *this;
+}
+//-----------------------------------------------------------------------------
 const Parameter& Parameter::operator= (real value)
 {
   *(this->value) = value;
@@ -82,9 +94,30 @@ const Parameter& Parameter::operator= (std::string value)
   return *this;
 }
 //-----------------------------------------------------------------------------
-const Parameter& Parameter::operator= (uint value)
+const Parameter& Parameter::operator= (const Parameter& parameter)
 {
-  *(this->value) = value;
+  delete value;
+
+  switch ( parameter._type )
+  {
+  case type_int:
+    value = new IntValue(*parameter.value);
+    break;
+  case type_real:
+    value = new RealValue(*parameter.value);
+    break;
+  case type_bool:
+    value = new BoolValue(*parameter.value);
+    break;
+  case type_string:
+    value = new StringValue(*parameter.value);
+    break;
+  default:
+    dolfin_error1("Unknown parameter type: %d.", parameter._type);
+  }  
+
+  _type = parameter._type;
+
   return *this;
 }
 //-----------------------------------------------------------------------------
@@ -94,6 +127,11 @@ Parameter::~Parameter()
 }
 //-----------------------------------------------------------------------------
 Parameter::operator int() const
+{
+  return *value;
+}
+//-----------------------------------------------------------------------------
+Parameter::operator uint() const
 {
   return *value;
 }
@@ -113,13 +151,38 @@ Parameter::operator std::string() const
   return *value;
 }
 //-----------------------------------------------------------------------------
-Parameter::operator uint() const
-{
-  return *value;
-}
-//-----------------------------------------------------------------------------
 Parameter::Type Parameter::type() const
 {
   return _type;
+}
+//-----------------------------------------------------------------------------
+dolfin::LogStream& dolfin::operator<<(LogStream& stream,
+				      const Parameter& parameter)
+{
+  switch ( parameter.type() )
+  {
+  case Parameter::type_int:
+    stream << "[Parameter: value = " 
+	   << static_cast<int>(parameter) << " (int)]";
+    break;
+  case Parameter::type_real:
+    stream << "[Parameter: value = "
+	   << static_cast<real>(parameter) << " (real)]";
+    break;
+  case Parameter::type_bool:
+    if ( static_cast<bool>(parameter) )
+      stream << "[Parameter: value = true (bool)]";
+    else
+      stream << "[Parameter: value = false (bool)]";
+    break;
+  case Parameter::type_string:
+    stream << "[Parameter: value = \""
+	   << static_cast<std::string>(parameter) << "\" (string)]";
+    break;
+  default:
+    dolfin_error1("Unknown parameter type: %d.", parameter._type);
+  }
+  
+  return stream;
 }
 //-----------------------------------------------------------------------------
