@@ -57,8 +57,9 @@ const ParameterValue& ParameterValue::operator= (uint value)
 //-----------------------------------------------------------------------------
 ParameterValue::operator int() const
 {
-  dolfin_error1("Unable to convert parameter of type %s to int.",
-		type().c_str());
+  cout << "Halla eller, fel typ" << endl;
+  //dolfin_error1("Unable to convert parameter of type %s to int.",
+  //		type().c_str());
   return 0;
 }
 //-----------------------------------------------------------------------------
