@@ -1,3 +1,9 @@
+// Copyright (C) 2005 Anders Logg.
+// Licensed under the GNU GPL Version 2.
+//
+// First added:  2005-12-19
+// Last changed: 2005-12-20
+
 #ifndef __DOLFIN_PARAMETER_H
 #define __DOLFIN_PARAMETER_H
 
@@ -6,5 +12,6 @@
 #include <dolfin/Parameter.h>
 #include <dolfin/ParameterList.h>
 #include <dolfin/ParameterSystem.h>
+#include <dolfin/Parametrized.h>
 
 #endif
